add basic colour or style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        button{
+            background-color: blueviolet;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <h1 id="xxx">Hi</h1>
+    <h1 class="myClass">I am Shawda</h1>
+    <h1>I am study of CSE</h1>
+    <p class="myClass">University of Rajshahi</p>
+    <p id="xxx">Rajshahi, Bangladesh</p>
+    <br><br>
+    <div id="box">This is a simple text</div>
+    <button style="background-color: red;">click me</button>
     
 </body>
 </html>
