--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
     <p class="myClass">University of Rajshahi</p>
     <p id="xxx">Rajshahi, Bangladesh</p>
     <br><br>
-    <div id="box">This is a simple text</div>
+    <!-- <div id="box">This is a simple text</div> -->
     <button style="background-color: red;">click me</button>
-    
+    <br><br>
+    <h1>Paragraph</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi eaque provident, et ex saepe nostrum. Odio esse repudiandae amet sed vel sunt unde optio, expedita quia autem aliquam quae soluta!</p>
+    <br><br>
+    <div>
+        This is a div
+    </div>
 </body>
 </html>
